[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Player/PlayerHFSM.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Hook/Hook.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/LedgeDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player/FloorDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/Skin.gd" type="Script" id=5]
[ext_resource path="res://src/Player/Body.gd" type="Script" id=6]
[ext_resource path="res://src/Player/CameraRig.gd" type="Script" id=7]
[ext_resource path="res://src/Player/Skills.gd" type="Script" id=8]
[ext_resource path="res://src/Player/SkillsHFSM/Move.gd" type="Script" id=9]
[ext_resource path="res://src/Player/SkillsHFSM/Idle.gd" type="Script" id=10]
[ext_resource path="res://src/Player/SkillsHFSM/Run.gd" type="Script" id=11]
[ext_resource path="res://src/Player/SkillsHFSM/Air.gd" type="Script" id=12]
[ext_resource path="res://src/Player/SkillsHFSM/Ledge.gd" type="Script" id=13]
[ext_resource path="res://src/Player/SkillsHFSM/Hook.gd" type="Script" id=14]
[ext_resource path="res://src/Combat/Stats.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Combat/HitBox/HitBox.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Hook" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -30 )

[node name="LedgeDetector" parent="." instance=ExtResource( 3 )]

[node name="FloorDetector" parent="." instance=ExtResource( 4 )]

[node name="Skin" type="Position2D" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="Body" type="Node2D" parent="Skin"]
position = Vector2( 0, -30 )
script = ExtResource( 6 )
size = Vector2( 50, 50 )
outline = Vector2( 10, 10 )
color_fill = Color( 0, 0.431373, 0.717647, 1 )
color_outline = Color( 0.231373, 0.145098, 0.584314, 1 )

[node name="Tween" type="Tween" parent="Skin"]

[node name="CameraRig" type="Position2D" parent="Skin"]
editor/display_folded = true
position = Vector2( 0, -30 )
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="Skin/CameraRig"]
current = true
process_mode = 0
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 6.0
editor_draw_drag_margin = true

[node name="Skills" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Move" type="Node" parent="Skills"]
editor/display_folded = true
script = ExtResource( 9 )

[node name="Idle" type="Node" parent="Skills/Move"]
editor/display_folded = true
script = ExtResource( 10 )

[node name="JumpDelay" type="Timer" parent="Skills/Move/Idle"]
wait_time = 0.1
one_shot = true

[node name="Run" type="Node" parent="Skills/Move"]
script = ExtResource( 11 )

[node name="Air" type="Node" parent="Skills/Move"]
editor/display_folded = true
script = ExtResource( 12 )

[node name="JumpDelay" type="Timer" parent="Skills/Move/Air"]
wait_time = 0.1
one_shot = true

[node name="Ledge" type="Node" parent="Skills"]
script = ExtResource( 13 )

[node name="Hook" type="Node" parent="Skills"]
script = ExtResource( 14 )

[node name="Stats" parent="." instance=ExtResource( 15 )]

[node name="HitBox" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, -30 )
